manifests/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc-webhook
  namespace: boktore-covid
  labels:
    app: bc-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bc-webhook
  template:
    metadata:
      labels:
        app: bc-webhook
    spec:
      containers:
      - name: bc-webhook
        image: kraivit/borktorecovid_webhook:4.0
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 256m
            memory: 512Mi
          limits:   
            cpu: 512m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bc-webhook
  namespace: boktore-covid
spec:
  selector:
    app: bc-webhook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
