manifests/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: wordpress-site
    app.kubernetes.io/managed-by: Terraform
    app.kubernetes.io/name: wordpress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "1m"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: wordpress-site
  namespace: boktore-covid
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wordpress-site
            port:
              name: http
        path: /(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: bc-webhook
            port:
              name: http
        path: /bc-webhook(/|$)(.*)
        pathType: Prefix
